--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -1,3 +1,16 @@
+.btnAdd_box {
+  display: flex;
+  flex-flow: column nowrap;
+  box-sizing: border-box;
+}
+.task_item {
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-size: 0.875em;
+  line-height: 1;
+  letter-spacing: 0.015rem;
+  white-space: pre-wrap;
+  word-break: break-all;
+}
 .task_completed {
-	color: #3f51b5;
+  color: #3f51b5;
 }
